http-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: http-ingress-visibility
spec:
  description: "Allow unrestricted HTTP traffic to collect visibility metrics"
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEntities:
        - all
    - toPorts:
        - ports:
            - port: "80"
              protocol: "TCP"
            - port: "443"
              protocol: "TCP"
            - port: "3550"
              protocol: "TCP"
            - port: "5050"
              protocol: "TCP"
            - port: "7000"
              protocol: "TCP"
            - port: "7070"
              protocol: "TCP"
            - port: "8080"
              protocol: "TCP"
            - port: "9555"
              protocol: "TCP"
            - port: "50051"
              protocol: "TCP"
          rules:
            http:
              - {}
